--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ footer {
 }
 .fondoTextos {
     background-color: rgba(255, 228, 196, 0.562);
+    border-radius: 5%;
 }
 /* CAJAS DE IMAGENES */
 .contenedor {
@@ -172,4 +173,25 @@ footer {
 .textContD {
     font-size: 125%;
     padding: 5%;
+}
+
+/* HTML PRODUCTOS */
+.ProductosCard {
+    border: #333 solid 3px;
+    border-radius: 3%;
+    margin-left: 20%;
+    margin-bottom: 2%;
+    padding: 3%;
+    background-color: bisque;
+}
+.ProductosCard img {
+    border-radius: 15px;
+}
+.ProductosCard h5 {
+    margin-top: 3%;
+}
+.botonProd {
+    color: #ffffff;
+    background-color: #333;
+    border: #333;
 }
