--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     padding: 0%;
     background-color: rgb(255, 242, 225);
     max-width: 100%;
+    align-items: center;
 }
 header {
     background-color: rgb(255, 242, 225);
